@@ -21,5 +21,7 @@ cd github/google-http-java-client/
 java -version
 echo $JOB_TYPE
 
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
+
 mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 mvn test -B
